# tempestroid

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: conformance-test-author.md  device-verifier.md  docs-doctor.md  ir-core-specialist.md  kotlin-compose-specialist.md  phase-architect.md  phase-reviewer.md  qt-renderer-specialist.md
.claude/skills/android-doctor/: SKILL.md  check.sh
.claude/skills/docs-sync-check/: SKILL.md  (+1 more)
.claude/workflows/: parity-chain.js
.github/workflows/: android-emulator.yml  ci.yml  docs.yml  publish.yml
android-host/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-host/app/: build.gradle.kts
android-host/app/src/main/c/: CMakeLists.txt  tempest_host.c
docs/: arquitetura.en.md  arquitetura.md  index.en.md  index.md  inicio-rapido.en.md  inicio-rapido.md  instalacao.en.md  instalacao.md  plan-design-system.md  plan-parity.md  plan-stable.md  plan.md  qt-fidelity-roadmap.md  roadmap.en.md  roadmap.md
docs/guia/: build.en.md  build.md  cli.en.md  cli.md  dados-ml.en.md  dados-ml.md  dispositivo-wsl.en.md  dispositivo-wsl.md  estilos.en.md  estilos.md  eventos.en.md  eventos.md  exemplos.en.md  exemplos.md  navegacao.en.md  navegacao.md  testing.en.md  testing.md  widgets.en.md  widgets.md
docs/hooks/: llms_txt.py
docs/referencia/: api.en.md  api.md  cobertura.en.md  cobertura.md  dispositivo.en.md  dispositivo.md  enums.en.md  enums.md
docs/research/: android-runbook.md  android-runtime.md  emulator-arm64-on-x86.md  feature-gating.md  g-polars-feasibility.md  g0-feasibility.md  g1-onnxruntime-path.md  g6-sklearn-feasibility.md  onnx-ml-stack.md
examples/: README.md
examples/animation/: app.py
examples/brforms/: app.py
examples/calculator/: app.py
examples/colorpicker/: app.py
examples/counter/: app.py  test_counter.py
examples/device_counter/: app.py
examples/form/: app.py
examples/forms/: app.py  test_forms.py
examples/gallery/: app.py
examples/gestures/: app.py
examples/h1buttons/: app.py
examples/h2gallery/: app.py
examples/h3gallery/: app.py
examples/h4gallery/: app.py
examples/h5gallery/: app.py
examples/h6gallery/: app.py
examples/icons/: app.py
examples/layout/: app.py
examples/lists/: app.py
examples/media/: app.py
examples/multifile/: main.py  pyproject.toml
examples/native_caps/: app.py
examples/navigation/: app.py  test_navigation.py
examples/onnxspike/: app.py  test_onnxspike.py
examples/overlays/: app.py  test_overlays.py
examples/platform/: app.py  pyproject.toml
examples/polarsspike/: app.py
examples/shell/: app.py
examples/sklearnspike/: app.py
examples/stopwatch/: app.py
examples/storybook/: app.py
examples/sysverify/: app.py  pyproject.toml
examples/tabs/: app.py
examples/theming/: app.py
examples/todo/: app.py
examples/visionsmoke/: app.py
examples/visionspike/: .gitignore  app.py  pyproject.toml  squeezenet1.1.int8.ort  test_visionspike.py
src/tempestroid/: __init__.py  style.py
tempestroid/: __init__.py  _adopt.py  animation.py  devices.py  i18n.py  icons.py  navigation.py  style.py  theme.py  validators.py  vision.py
tempestroid/bridge/: __init__.py  device.py  errors.py  handlers.py  jni.py  protocol.py  serializer.py
tempestroid/cli/: __init__.py  advisories.py  apk_repack.py  app_loader.py  branding.py  bundle.py  console.py  icongen.py  lint.py  main.py  onnx_optimize.py  packaging.py  project.py  release_build.py  scaffold.py  setup_env.py  templates.py
tempestroid/components/: __init__.py  bars.py  base.py  brforms.py  cards.py  dates.py  disclosure.py  feedback.py  fields.py  layout.py  mediainputs.py  menu.py  navigation.py  selection.py  table.py
tempestroid/core/: __init__.py  introspection.py  ir.py  reconciler.py  state.py
tempestroid/devserver/: __init__.py  client.py  harness.py  qr.py  server.py
tempestroid/native/: __init__.py  audio.py  background.py  biometrics.py  bluetooth.py  camera.py  clipboard.py  connectivity.py  database.py  dispatch.py  geolocation.py  haptics.py  image.py  inference.py  lifecycle.py  model_store.py  notifications.py  permissions.py  prefs.py  push.py  secure_storage.py  sensors.py  share.py  storage.py  system.py
tempestroid/testing/: __init__.py  adb_server.py  backend.py  emulator.py  locator.py  mirror.py  page.py  pool.py  runner.py  tree.py
tempestroid/widgets/: __init__.py  animated.py  base.py  button.py  events.py  forms.py  gestures.py  indicators.py  inputs.py  layout.py  lists.py  media.py  navigation_widgets.py  overlays.py  text.py
tests/: conftest.py
tests/conformance/: test_conformance.py
tests/unit/: test_adb_server.py  test_advisories.py  test_animation.py  test_apk_repack.py  test_app_loader.py  test_br_components.py  test_branding.py  test_bridge.py  test_bundle.py  test_cli.py  test_components.py  test_compose_translator.py  test_composite_components.py  test_devices.py  test_devserver.py  test_emulator_backend.py  test_emulator_pool.py  test_events.py  test_forms.py  test_gestures_advanced.py  test_harness.py  test_icongen.py  test_icons.py  test_input_widgets.py  test_introspection.py  test_jni_bridge.py  test_layout_widgets.py  test_lists.py  test_media.py  test_mirror.py  test_model_store.py  test_native.py  test_native_image.py  test_native_inference.py  test_navigation.py  test_navigation_qt.py  test_onnx_optimize.py  test_overlay_gestures.py  test_overlays.py  test_packaging.py  (+34 more)
toolchain/: 00_fetch_cpython.sh  01_build_wheels.sh  02_stage_deps.sh  README.md  _diag_hotreload.sh  build_numpy.sh  build_numpy_arm64.sh  build_numpy_x86.sh  build_openblas_x86.sh  build_polars_x86.sh  build_scipy_x86.sh  build_sklearn_x86.sh  bump_version.py  capture_gif.sh  device_loop.sh  emulator_pool.sh  emulator_snapshot.sh  emulator_verify.sh  env.sh  frames_to_gif.py  provision_avd.sh  requirements-android.txt  stage_emulator_runtime.sh  stage_polars_x86.sh  stage_science_x86.sh  validate_gallery.sh  verify_host_apk.py  visual_regression.py
tools/: shoot_docs.py
(+188 files in other folders)
