[project]
name = "tempestroid"
version = "0.6.2"
description = "Framework for building native Android apps in typed Python — declarative typed UI tree, Qt simulator + Compose device renderers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mauricio Benjamin" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "android",
    "ui",
    "framework",
    "declarative",
    "pydantic",
    "compose",
    "qt",
    "mobile",
    "cross-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Qt desktop simulator + asyncio integration (Trilho A, phases A3/A4).
qt = [
    "PySide6>=6.7",
    "qasync>=0.27",
]

[project.urls]
Homepage = "https://github.com/mauriciobenjamin700/tempestroid"
Documentation = "https://mauriciobenjamin700.github.io/tempestroid/"
Repository = "https://github.com/mauriciobenjamin700/tempestroid"
Changelog = "https://github.com/mauriciobenjamin700/tempestroid/blob/main/CHANGELOG.md"
Issues = "https://github.com/mauriciobenjamin700/tempestroid/issues"

[project.scripts]
tempest = "tempestroid.cli.main:app"

[dependency-groups]
# The Qt simulator is part of the dev/test loop, so its deps live here too and
# are installed by `uv sync` automatically. End users opt in via the `qt` extra
# (`pip install tempestroid[qt]`); the framework core needs neither.
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "PySide6>=6.7",
    "qasync>=0.27",
    # Documentation site (PT-BR). `uv sync` installs it; build with
    # `uv run mkdocs build --strict` / serve with `uv run mkdocs serve`.
    # Pinned <9.6: the 9.6.x line prints a non-suppressible MkDocs-2.0 protest
    # banner to stderr on every build/serve. 9.5.x renders identically without it.
    "mkdocs-material>=9.5,<9.6",
    # PT-BR / EN-US language switcher (adds the header locale selector).
    "mkdocs-static-i18n>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# The prebuilt host APK is staged into tempestroid/_assets/ (gitignored, too big
# to track) and `tempest install` adb-installs it offline. List it as an artifact
# so hatchling ships the VCS-ignored file in BOTH the wheel and the sdist.
artifacts = ["tempestroid/_assets/*.apk"]

[tool.hatch.build.targets.wheel]
packages = ["tempestroid"]

[tool.hatch.build.targets.sdist]
# Strict allowlist: ship the package + docs/examples + metadata. The B-track
# build scaffolding (Gradle/Kotlin/C host + CPython toolchain) is only needed in
# a full repo checkout for `tempest build`/`run`, never by PyPI consumers.
only-include = ["tempestroid", "examples", "docs", "README.md", "LICENSE", "CHANGELOG.md", "mkdocs.yml"]

[tool.ruff]
line-length = 88
target-version = "py311"
# Flat layout: the first-party package `tempestroid` sits at the repo root, so
# ruff resolves first-party imports from "." (not a src/ wrapper).
src = ["."]
# B-track scaffolding (Gradle/Kotlin/C + vendored build clones) is not framework
# Python; the quality gates must not touch it. See CLAUDE.md "Layout".
extend-exclude = ["toolchain", "android-host"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"examples/*" = ["D"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["tempestroid", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
