[project]
name = "tempestroid"
version = "0.18.0"
description = "Framework for building native Android apps in typed Python — declarative typed UI tree, Qt simulator + Compose device renderers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mauricio Benjamin" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "android",
    "ui",
    "framework",
    "declarative",
    "pydantic",
    "compose",
    "qt",
    "mobile",
    "cross-platform",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "tempest-core>=0.9.1",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Qt desktop simulator + asyncio integration (Trilho A, phases A3/A4).
qt = [
    "PySide6>=6.7",
    "qasync>=0.27",
]
# `tempest icon` — generate the launcher icon + boot splash from one source
# image (Pillow). Opt in with `pip install tempestroid[icons]`.
icons = [
    "pillow>=10.0",
]
# On-device ONNX vision inference (Trilho G). Brings the ort-vision-sdk with its
# pluggable backend (>=0.4.0); `tempestroid.native.inference.AarBackend` runs the
# SDK's inference through the native onnxruntime-android AAR over the bridge, so
# the SDK's NumPy pre/post still runs in Python. On the desktop this pulls
# onnxruntime (the SDK's own dep) for parity testing; on the device only
# ort_vision_sdk + numpy + pillow are staged (inference goes to the AAR).
vision = [
    "ort-vision-sdk>=0.4.0",
    # `tempest optimize` (Trilho G3): .onnx → .ort + INT8 quantization run on the
    # host (build time). onnx is the graph lib onnxruntime's quantization +
    # ort-conversion tooling needs (fp16 additionally wants onnxconverter-common,
    # lazily imported).
    "onnx>=1.17",
]
# Heavy device capabilities are gated at BUILD time, not pip time: the native
# weight (CameraX, ML Kit, Firebase, media3, maps) lives in the Android host APK
# and is bundled only when the app opts in. These extras carry no Python deps —
# they are intent markers so `pip install tempestroid[camera]` documents which
# `[tool.tempest] features` (or `tempest build --feature camera`) the project
# uses. The lean default build ships none of them, keeping the APK small.
camera = []
qr = []
push = []
video = []
maps = []
features = []

[project.urls]
Homepage = "https://github.com/mauriciobenjamin700/tempestroid"
Documentation = "https://mauriciobenjamin700.github.io/tempestroid/"
Repository = "https://github.com/mauriciobenjamin700/tempestroid"
Changelog = "https://github.com/mauriciobenjamin700/tempestroid/blob/main/CHANGELOG.md"
Issues = "https://github.com/mauriciobenjamin700/tempestroid/issues"

[project.scripts]
tempest = "tempestroid.cli.main:app"

[dependency-groups]
# The Qt simulator is part of the dev/test loop, so its deps live here too and
# are installed by `uv sync` automatically. End users opt in via the `qt` extra
# (`pip install tempestroid[qt]`); the framework core needs neither.
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "PySide6>=6.7",
    "qasync>=0.27",
    # `tempest icon` asset generator (kept here so the test suite can exercise it).
    "pillow>=10.0",
    # Trilho G spike: `examples/onnxspike` imports numpy so the headless driver
    # can run it too (the device proof uses the cross-compiled android wheel).
    "numpy>=2.0",
    # Trilho G6: `examples/sklearnspike` imports scipy + scikit-learn so the gate
    # type-checks it (host wheels here; the device proof uses the cross-compiled
    # android wheels staged by `make stage-science`).
    "scipy>=1.13",
    "scikit-learn>=1.5",
    # Trilho G: `examples/polarsspike` imports polars so the gate type-checks it
    # (host wheel here; the device proof uses the cross-compiled abi3 android wheel
    # staged by `make stage-polars`).
    "polars>=1.20",
    # Trilho G: the vision SDK with the pluggable backend — lets the gate exercise
    # the cross-repo contract (Detector driven through `native.inference.AarBackend`
    # over a loopback). Pulls onnxruntime on the desktop for the integration test;
    # on the device inference goes to the native AAR instead.
    "ort-vision-sdk>=0.4.0",
    # `tempest optimize` (G3) host tooling: .onnx → .ort + INT8 quantization.
    "onnx>=1.17",
    # Documentation site (PT-BR). `uv sync` installs it; build with
    # `uv run mkdocs build --strict` / serve with `uv run mkdocs serve`.
    # Pinned <9.6: the 9.6.x line prints a non-suppressible MkDocs-2.0 protest
    # banner to stderr on every build/serve. 9.5.x renders identically without it.
    "mkdocs-material>=9.5,<9.6",
    # PT-BR / EN-US language switcher (adds the header locale selector).
    "mkdocs-static-i18n>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# The prebuilt host APK is staged into tempestroid/_assets/ (gitignored, too big
# to track) and `tempest install` adb-installs it offline. List it as an artifact
# so hatchling ships the VCS-ignored file in BOTH the wheel and the sdist.
artifacts = ["tempestroid/_assets/*.apk"]

[tool.hatch.build.targets.wheel]
packages = ["tempestroid"]
# Ship the android-host Gradle project INSIDE the wheel (as tempestroid/_android_host,
# ~1.3 MB of Gradle/Kotlin/C source) so `tempest build apk`/`prd` works from a
# plain `pip install` — no `git clone` of the repo, always matched to the
# installed version. The heavy bits (prebuilt host APK, CPython natives) are NOT
# here: the build runs in prebuilt mode, reusing the host APK's natives. Build
# outputs + machine-specific files are excluded.
force-include = { "android-host" = "tempestroid/_android_host" }
exclude = [
    "**/build/**",
    "**/.gradle/**",
    "tempestroid/_android_host/local.properties",
    "tempestroid/_android_host/app/src/main/assets/tempest_app_bundle.zip",
    "tempestroid/_android_host/app/src/main/assets/tempest_app.py",
]

[tool.hatch.build.targets.sdist]
# Ship the package + docs/examples + metadata + the android-host Gradle project
# (the wheel force-includes it as tempestroid/_android_host, and the wheel is
# built FROM the sdist on PyPI, so it must be in the sdist too). Build outputs +
# the CPython toolchain (toolchain/dist) are NOT shipped — `tempest build` runs
# in prebuilt mode (reuses the host APK's natives), never from source on PyPI.
only-include = ["tempestroid", "android-host", "examples", "docs", "README.md", "LICENSE", "CHANGELOG.md", "mkdocs.yml"]
exclude = [
    "android-host/build",
    "android-host/.gradle",
    "android-host/app/build",
    "android-host/local.properties",
    "android-host/app/src/main/assets/tempest_app_bundle.zip",
    "android-host/app/src/main/assets/tempest_app.py",
]

[tool.ruff]
line-length = 88
target-version = "py311"
# Flat layout: the first-party package `tempestroid` sits at the repo root, so
# ruff resolves first-party imports from "." (not a src/ wrapper).
src = ["."]
# B-track scaffolding (Gradle/Kotlin/C + vendored build clones) is not framework
# Python; the quality gates must not touch it. See CLAUDE.md "Layout".
extend-exclude = ["toolchain", "android-host"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"examples/*" = ["D"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["tempestroid", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
